--- a/src/Components/Portfolio.css
+++ b/src/Components/Portfolio.css
@@ -398,7 +398,7 @@ text-decoration: none;
     display: flex;
     flex-direction: column;
     gap: 30px;
-    background: linear-gradient(to right, rgba(245, 245, 245, 0.8), rgba(245, 245, 245, 0.8)), url("C:\Users\user\OneDrive\Desktop\vite react\shashank_portfolio_01\public\common-bg.svg");
+    background: linear-gradient(to right, rgba(245, 245, 245, 0.8), rgba(245, 245, 245, 0.8)), url("/common-bg.svg");
 
 }
 .contact_main{
