--- a/src/Components/Portfolio.css
+++ b/src/Components/Portfolio.css
@@ -532,7 +532,7 @@ font-family:  sans-serif;
     gap: 50px;
     background: linear-gradient(to right, rgba(245, 245, 245, 0.8), rgba(245, 245, 245, 0.8)), url("/common-bg.svg");
  width: 100%;
- padding: 200px;
+ padding-top: 200px;
 
  
 
@@ -645,7 +645,7 @@ font-family:  sans-serif;
     display: flex;
     gap: 50px;
     padding: 30px;
-    text-align: start;
+    text-align: center;
 }
 .casestudies_middlepage_seelive_button a{
 
@@ -700,26 +700,37 @@ text-transform: capitalize;
     display: flex;
     justify-content: space-around;
     align-items: center;
-
+     flex-direction: row-reverse;
+     padding: 50px;
     background: linear-gradient(to right, rgba(245, 245, 245, 0.8), rgba(245, 245, 245, 0.8)), url("/common-bg.svg");
 
 }
 .AboutMe_summary_image_left{
     flex: 1;
     padding-left: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center     ;
   
     
     
 }
 .AboutMe_summary_image_left img{
   
-    border-radius: 50%;
-
+width: 300px;
+height: 500px;
+border-radius: 50%  ;
 object-fit: cover;
+
+
+
 }
 
 .AboutMe_summary_lines_right{
     flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center  ;
 
 }
 .AboutMe_summary_lines_right p{
@@ -1710,14 +1721,16 @@ align-items: center;
     
     .casestudies_mainpage{
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+flex-direction: column;
+       justify-content: center;
+       align-items: center;
         gap: 50px;
         background: linear-gradient(to right, rgba(245, 245, 245, 0.8), rgba(245, 245, 245, 0.8)), url("/common-bg.svg");
-     width: 100%;
-     padding-top: 150px;
-     border: 2px solid black;
+width: 100%;
+     margin-top: 90px;
+     padding: 50px;
+
+   
    
     
      
@@ -1732,27 +1745,34 @@ align-items: center;
     }
     .casestudies_mainpage_lines{
     
-        text-align: center;
+       padding: 20px;
         width: 100%;
+        display: flex;
+
+              color: #333333;
         font-family: sans-serif;
-        line-height: 1.5;
+        text-align: center;
+ 
     }
     .casestudies_mainpage_button{
         font-family: sans-serif;
         text-transform: uppercase;
     
         background-color: #7843E9;
-        padding: 10px 30px ;
+        padding: 10px 50px ;
         border-radius: 5px;
+
     
     
     
         
     }
     .casestudies_mainpage_button a{
+        width: 100%;
         color: white;
         text-decoration-line: none;
-        font-size: 15px;
+        font-size: 13px;
+        display: flex;
     }
     .casestudies_mainpage_button:hover{
         transform: translateY(-3px);
@@ -1763,7 +1783,7 @@ align-items: center;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-    
+    padding: 50px;
     }
     .casestudies_middlepage img{
         width: 60%;
@@ -1781,13 +1801,14 @@ align-items: center;
     }
     .casestudies_middlepage_projeactOverview_heading{
         font-family: sans-serif;
-        font-size: 28px;
+        font-size: 25px;
         text-transform: uppercase;
         text-align: start;
     }
     .casestudies_middlepage_projeactOverview_lines{
-        width: 50%;
+        width: 100%;
         text-align: start;
+        padding: 20px;
     }
     .casestudies_middlepage_toolsused_heading{
     
@@ -1826,12 +1847,14 @@ align-items: center;
         text-align: start;
         padding: 30px;
         color: #111111;
+        width: 100%;
     }
     .casestudies_middlepage_seelive_button{
         display: flex;
         gap: 50px;
         padding: 30px;
-        text-align: start;
+        text-align: center;
+        width: 100%;
     }
     .casestudies_middlepage_seelive_button a{
     
@@ -1843,6 +1866,7 @@ align-items: center;
         font-family: sans-serif;
     font-size: 10px;
     text-transform: capitalize;
+    width: 100%;
     
     }
     .casestudies_middlepage_seelive_button a:hover{
@@ -1904,11 +1928,11 @@ align-items: center;
         
     }
     .AboutMe_summary_image_left img{
-        padding: 20px;
+        padding: 10px;
       
         border-radius: 50%;
         width: 60%;
-        height: 100%;
+        height: 90%;
     
     object-fit: cover;
     }
@@ -1921,12 +1945,13 @@ width: 100%;
     
     }
     .AboutMe_summary_lines_right p{
-        width: 80%;
+        width: 100%;
         line-height: 1.5;
         font-family: sans-serif;
         color: #333333;
     
         word-spacing: 1;
+        text-align: center;
     
     }
     .technologies_known{
